--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "tailwindcss": "^3.4.14"
   },
   "scripts": {
-    "build": "tailwindcss -i ./tailwind.css -o ./src/style.css --watch"
+    "dev": "tailwindcss -i ./tailwind.css -o ./docs/assets/style.css --watch"
   },
   "dependencies": {
     "dev-server": "^0.2.0"
