--- a/docs/config.json
+++ b/docs/config.json
@@ -17,20 +17,22 @@
                     "url": "https://hatrabbits.com/wp-content/uploads/2017/01/tafel-1.jpg"
                 }
             ],
+            "slug": "sdsd",
             "video": "https://player.vimeo.com/video/811717286?title=0&autopause=0&controls=0&app_id=122963"
         },
         {
             "title": "Đam mê - DLS 2023",
             "category": "documentary",
-            "description": "sdsdadấđâsđááđa adá đá sađâsđâsđâsđâsdấđá",
+            "slug": "dam-me-dls-2023",
+            "description": "DoP\nPH: Dream Forest Pictures",
             "images": [
                 {
                     "title": "",
-                    "url": "http://img.youtube.com/vi/Le1fL3YySks/0.jpg"
+                    "url": "/assets/d25922e2-9226-4d41-b5ed-a3dc230c5227.jpeg"
                 },
                 {
                     "title": "",
-                    "url": "https://hatrabbits.com/wp-content/uploads/2017/01/random.jpg"
+                    "url": "http://img.youtube.com/vi/Le1fL3YySks/maxresdefault.jpg"
                 },
                 {
                     "title": "",
