--- a/docs/config.json
+++ b/docs/config.json
@@ -28,7 +28,7 @@
             "images": [
                 {
                     "title": "",
-                    "url": "/assets/d25922e2-9226-4d41-b5ed-a3dc230c5227.jpeg"
+                    "url": "./assets/d25922e2-9226-4d41-b5ed-a3dc230c5227.jpeg"
                 },
                 {
                     "title": "",
@@ -110,8 +110,8 @@
         }
     ],
     "contact": {
-        "phone":"📱 +84 977319900",
-        "email":"📧 nhatap@gmail.com",
+        "phone":"+84 977319900",
+        "email":"nhatap@gmail.com",
         "youtube":"sdsdsd"
     },
     "cv": {
