--- a/.pages.yml
+++ b/.pages.yml
@@ -55,7 +55,7 @@ content:
         type: rich-text
   - name: site
     label: Site settings
-    path: docs/_data/site.json
+    path: docs/site.json
     type: file
     fields:
       - name: title
