Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -55,7 +55,7 @@ content:
         type: rich-text
   - name: site
     label: Site settings
-    path: docs/site.json
+    path: docs/_data/site.json
     type: file
     fields:
       - name: title
@@ -65,10 +65,6 @@ content:
         label: Website description
         type: string
         description: Will be provused for any page with no description.
-      - name: url
-        label: Website URL
-        type: string
-        pattern: ^(https?:\/\/)?(www\.)?[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}(\/[^\s]*)?$
       - name: cover
         label: Preview image
         type: image
