--- a/.github/workflows/mds2json.yml
+++ b/.github/workflows/mds2json.yml
@@ -17,8 +17,7 @@ jobs:
       with:
         settings-json-file: docs/_data/mds2json.json
 
-    - name: Push changes
-      run: |
-        git add docs/_data/projects.json
-        git commit -m "Update projects.json"
-        git push
+    # Commit all changed files back to the repository
+    - uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+          commit_message: Apply converted files
