--- a/.github/workflows/mds2json.yml
+++ b/.github/workflows/mds2json.yml
@@ -17,7 +17,10 @@ jobs:
       with:
         settings-json-file: docs/_data/mds2json.json
 
-    # Commit all changed files back to the repository
-    - uses: stefanzweifel/git-auto-commit-action@v5
-      with:
-          commit_message: Apply converted files
+    - name: Push changes
+      run: |
+        git config --global user.name 'Bot'
+        git config --global user.email '<>'
+        git add .
+        git commit -m "update converted files"
+        git push
