--- a/.github/workflows/mds2json.yml
+++ b/.github/workflows/mds2json.yml
@@ -3,6 +3,9 @@ name: Convert Markdown Files to JSON
 on:
   push:
     branches: [ main ]
+    # Check markdown files pushed only
+    paths:
+      - '**.md'
 
 jobs:
   markdown-to-json:
