--- a/.pages.yml
+++ b/.pages.yml
@@ -44,7 +44,7 @@ content:
           min: 1
   - name: gallery
     label: Gallery
-    path: docs/data/gallery
+    path: docs/data/gallery.json
     type: file
     fields:
       - name: images
@@ -52,6 +52,8 @@ content:
         type: image
         list: true
         options:
+          media:
+            input: docs/media/gallery
           multiple: true
   - name: blogs
     label: Blogs
