--- a/.pages.yml
+++ b/.pages.yml
@@ -53,6 +53,9 @@ content:
         list: true
         options:
           multiple: true
+          media:
+            input: docs/media/gallery
+            output: media/gallery
   - name: blogs
     label: Blogs
     path: docs/data/blogs
