--- a/.pages.yml
+++ b/.pages.yml
@@ -53,9 +53,8 @@ content:
         list: true
         options:
           multiple: true
-          media:
-            input: docs/media/gallery
-            output: media/gallery
+          path: gallery
+          extensions: [jpg, png]
   - name: blogs
     label: Blogs
     path: docs/data/blogs
