Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -50,6 +50,8 @@ content:
       - name: photos
         label: Photos
         type: image
+        default: []
+        required: false
         list: true
         options:
           multiple: true
