Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -50,6 +50,10 @@ content:
       - name: photos
         label: Photos
         type: image
+        options:
+          multiple: true
+          path: gallery
+          extensions: [jpg, png]
   - name: blogs
     label: Blogs
     path: docs/data/blogs
