Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -50,6 +50,7 @@ content:
       - name: photos
         label: Photos
         type: image
+        list: true
         options:
           multiple: true
           path: gallery
