--- a/.pages.yml
+++ b/.pages.yml
@@ -42,7 +42,7 @@ content:
         type: number
         options:
           min: 1
-  - name: xgallery
+  - name: gallery
     label: Gallery
     path: docs/data/gallery.json
     type: file
@@ -53,7 +53,7 @@ content:
         list: true
         options:
           multiple: true
-          path: gallery
+          path: md
           extensions: [jpg, png]
   - name: blogs
     label: Blogs
