--- a/.pages.yml
+++ b/.pages.yml
@@ -53,7 +53,7 @@ content:
         list: true
         options:
           multiple: true
-          path: media/md
+          path: docs/media/md
           extensions: [jpg, png]
   - name: blogs
     label: Blogs
