--- a/.github/workflows/resizeImgs.yml
+++ b/.github/workflows/resizeImgs.yml
@@ -5,9 +5,9 @@ on:
       branches: [ main ]
       # Check if imgs, config files pushed only
       paths:
-        - 'docs/media/*.jpg'
-        - 'docs/media/*.jpeg'
-        - 'docs/media/*.png'
+        - 'docs/media/**/*.jpg'
+        - 'docs/media/**/*.jpeg'
+        - 'docs/media/**/*.png'
         - '**/resizeImgs.yml'
 
 jobs:
@@ -27,7 +27,7 @@ jobs:
           IMAGES_MAX_WIDTH: "1280"
           IMAGES_QUALITY: "85"
           IMAGES_FORMATS: "jpg, jpeg, png" 
-          IMAGES_DIRECTORIES: "docs/media"
+          IMAGES_DIRECTORIES: "docs/media,docs/media/gallery"
           IMAGES_SUFFIX: "_md"
 
       - name: Push changes
