--- a/.github/workflows/resizeImgs.yml
+++ b/.github/workflows/resizeImgs.yml
@@ -29,6 +29,7 @@ jobs:
           IMAGES_FORMATS: "jpg, jpeg, png" 
           IMAGES_DIRECTORIES: "docs/media/gallery"
           IMAGES_SUFFIX: "_md"
+          DEBUG: true
 
       - name: Push changes
         run: |
