--- a/.github/workflows/resizeImgs.yml
+++ b/.github/workflows/resizeImgs.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v4
         with:
-          add: 'public/'
+          add: 'docs/media'
           author_name: "github-actions[bot]"
           author_email: "github-actions@users.noreply.github.com"
           message: |
